What's new?
===========

Prototype 1.11+dev6
-------------------

Client changes: 
- Render player trails to make it easier to gauge
  players' velocities from a distance. (currently windows-only)
- Minor rendering fixes (currently windows-only)
- Warnings on the HUD for low health / armor.
- New default font.

Universal ROTC changes:
- Micro-grenade Launcher changes:
  - Now called Battle Rifle.
  - Now semi-automatic and fires two projectiles at once.
  - Increase damage from 25/2 to 60/2 per projectile.
  - Reduce projectile speed.
  - Re-intruduced influence of player trajectory
    on projectile trajectory (although lower than before).
- Increased minimum speed needed to suffer impact damage.
- Minor visual tweaks.

ROTC: Ethernet changes:
- Damaging enemies no longer restores a player's health.

Prototype 1.11
--------------

Released: Nov. 30, 2010

- Replaced HTML manual with server-driven in-game online help
  and README, NEWS, AUTHORS and COPYING files.
- Changes to Ethernet zone mechanics:
  CATs can only capture zones adjacent to their own zones, but can
  enter any enemy zone to prevent the enemy from manifesting there.
- Unlimited etherboarding.
- Higher maximum speed for CATs.
- No more weapon sets: CATs carry both MG and Sniper ROFL.
- Reduced MG splash damage radius from 3 to 2 and removed 
  influence of player trajectory on MG projectile trajectory.
- Reduced Sniper ROFL damage & armor cost.
- The "Controls" dialog now allows rebinding almost every control
  and should finally work properly (keep your fingers crossed).
- Early version of dynamic in-game music.
- More player statistics.
- More useful minimap.
- Color of sniper projectile trail now shows if the shot hit.
- Revert to simpler (uglier and faster) zone rendering for now.
- Zones now flash when they change color.
- The sky now changes color to show which team has more health
  in a disputed zone.
- Reverted to always equipping the Trident when manifesting as CAT.