@@ -9,7 +9,7 @@
 //-----------------------------------------------------------------------------
 
 $GameNameString = "rotc-ethernet";
-$GameVersionString = "p.1.11+dev6";
+$GameVersionString = "p.1.11+dev7";
 
 //------------------------------------------------------------------------------
 
